2005-07-30 J.R. Heisey <jrheisey@sourceforge.com>
	src/cmd_gpsim.h
	* src/cod.cc: Removed an error message from PicCodProgramFileType::
	open_a_file() that is handled externally.

	* src/registers.cc: Fixed a bug in RegisterValue::toString()
	not displaying enough digits.

	* src/value.h, src/symbol.h, src/registers.h, gui/gui_register.h:
	Added some conversion and equals operators.

	* cli/ui_gpsim.cc, src/cmd_gpsim.h: Added several string
	formatting routines.

	* plat/win32/gpsim.def: Updated for new pin I/o routines.

	* gui/gui_watch.cc, gui/gui_watch.h: Updated display of values
	to account for uninitialized bits and bit masked register
	symbols.

2005-08-01 Scott Dattalo <scott@dattalo.com>
	* src/p16x5x.h, src/p16x5x.cc: Upgraded the P16C54 and P16C55 to
	the new I/O port design.

	* src/16bit-processors.cc, src/16bit-registers.cc,
	src/16bit-registers.h, src/p18x.cc, src/p18x.h:
	Completed converting the 16-bit core I/O ports to the new I/O
	redesign (note - the peripheral-to-I/O mapping still needs to be
	completed). 

	* src/ioports.h, src/ioports.cc: deprecated the old PIC_IOPORT
	class and all of its children.
	
2005-08-01 Scott Dattalo <scott@dattalo.com>
	* src/14bit-processors.cc, src/14bit-processors.h,
	src/14bit-tmrs.cc, src/14bit-tmrs.h, src/intcon.cc, src/intcon.h,
	src/pir.h, src/p16x6x.cc, src/p16x6x.h, src/ioports.cc,
	src/ioports.h, src/p16x7x.cc, src/p12x.cc:

	-- The intcon and pir registers were not getting set up correctly for
	   the midrange devices.
	-- Added 'sinks' and 'sources' for the CCP module.
	
	* src/16bit-processors.cc, src/16bit-processors.h, src/p18x.cc,
	src/p18x.h: Began porting the new I/O port design to the 16bit
	core devices. 

	* src/symbol.cc: Added a diagnostic message that is printed
	whenever a register symbol with a null cpu is added to the symbol
	table.

	* regression/run_regression.sh, regression/p18f452_ports.asm,
	regression/p18f452_ports.stc: